--- a/whatsapp-backend/package.json
+++ b/whatsapp-backend/package.json
@@ -11,7 +11,9 @@
   "author": "HS",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.17"
+    "mongoose": "^5.11.17",
+    "pusher": "^4.0.2"
   }
 }
